--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <h3>saya pelajar SMK PANCA BHAKTI RAKIT</h3>
                 <span class="animate" style="--i:3;"></span>
             </div>
-            <p>saya SEKOLAH DI SMK PANCA BHAKTI RAKIT dan saya sekarang Kelas XII TKJ O1
+            <p>SAYA SEKOLAH DI SMK PANCA BHAKTI RAKIT dan saya sekarang Kelas XII TKJ O1
             
                 <span class="animate" style="--i:4;"></span>
             </p>
@@ -76,7 +76,7 @@
 
         <div class="about-content">
             <h3>Hallo saya Fildan Saputra .<span class="animate scroll" style="--i:3;"></span></h3>
-            <p>Hello! Saya Fildan saputra, Saya pelajar di SMK PBR dan saya mengambil jurusan TKJ (Teknik Jaringan dan Telekomunikasi) <br>
+            <p>Hello! Saya Fildan saputra, Saya pelajar di SMK PBR dan saya mengambil jurusan TKJ (Teknik Jaringan Komputer dan Telekomunikasi) <br>
                 <span class="animate scroll" style="--i:4;"></span>
             </p>
 
